--- a/cfa-conseil/package.json
+++ b/cfa-conseil/package.json
@@ -20,6 +20,10 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vite-plugin-svgr": "^4.5.0"
+    },
+    "dependencies": {
+        "lucide-react": "^0.544.0"
     }
 }
