--- a/cfa-conseil/package.json
+++ b/cfa-conseil/package.json
@@ -24,6 +24,12 @@
         "vite-plugin-svgr": "^4.5.0"
     },
     "dependencies": {
+        "@tiptap/extension-color": "^3.6.1",
+        "@tiptap/extension-image": "^3.6.1",
+        "@tiptap/extension-text-align": "^3.6.1",
+        "@tiptap/extension-text-style": "^3.6.1",
+        "@tiptap/react": "^3.6.1",
+        "@tiptap/starter-kit": "^3.6.1",
         "lucide-react": "^0.544.0"
     }
 }
