--- a/cfa-conseil/package.json
+++ b/cfa-conseil/package.json
@@ -18,7 +18,8 @@
         "axios": "^1.11.0",
         "lucide-react": "^0.544.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^7.9.3"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
