--- a/cfa-conseil/package.json
+++ b/cfa-conseil/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+    "optimize:images": "node optimize-images.js",
         "build": "vite build",
         "dev": "vite"
     },
@@ -19,7 +20,8 @@
         "lucide-react": "^0.544.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^7.9.3"
+        "react-router-dom": "^7.9.3",
+        "sharp": "^0.34.4"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
