--- a/cfa-conseil/package.json
+++ b/cfa-conseil/package.json
@@ -29,7 +29,8 @@
         "react-router-dom": "^7.9.3",
         "sharp": "^0.34.4",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "ziggy-js": "^2.6.0"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
@@ -44,4 +45,3 @@
         "vite-plugin-svgr": "^4.5.0"
     }
 }
-
